--- a/apache2_setup.yml
+++ b/apache2_setup.yml
@@ -7,7 +7,7 @@
       apt:
         name: apache2
         state: present
-        update_cache: yes
+        # update_cache: yes
 
     - name: Enable Apache2 service to start on boot
       systemd:
