--- a/apache2_setup.yml
+++ b/apache2_setup.yml
@@ -1,16 +1,26 @@
 ---
-- name: Configure Apache2 service
-  hosts: all
+- name: Create temp.txt file
+  hosts: localhost
   tasks:
-    - name: Install Apache2 package
-      become: yes
-      apt:
-        name: apache2
-        state: present
+    - name: Ensure temp.txt file is created
+      file:
+        path: /path/to/temp.txt
+        state: touch
+        mode: '0644'
+
+# ---
+# - name: Configure Apache2 service
+#   hosts: all
+#   tasks:
+#     - name: Install Apache2 package
+#       become: true
+#       apt:
+#         name: apache2
+#         state: present
 
 
-    - name: Ensure Apache2 is started
-      ansible.builtin.service:
-        name: apache2
-        state: started
-        enabled: true
+#     - name: Ensure Apache2 is started
+#       ansible.builtin.service:
+#         name: apache2
+#         state: started
+#         enabled: true
