--- a/apache2_setup.yml
+++ b/apache2_setup.yml
@@ -2,11 +2,18 @@
 - name: Create temp.txt file
   hosts: localhost
   tasks:
-    - name: Ensure temp.txt file is created
-      file:
-        path: /home/jatin/awx/temp.txt
-        state: touch
-        mode: '0644'
+    - name: List files in the current directory
+      shell: ls -l
+      register: files_list
+
+    - name: Show the listed files
+      debug:
+        var: files_list.stdout
+    # - name: Ensure temp.txt file is created
+    #   file:
+    #     path: /home/jatin/awx/temp.txt
+    #     state: touch
+    #     mode: '0644'
 
 # ---
 # - name: Configure Apache2 service
