--- a/apache2_setup.yml
+++ b/apache2_setup.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create temp.txt file
-  hosts: localhost
+  hosts: all
   tasks:
     - name: List files in the current directory
       shell: ls -l
