--- a/hello-world-pod.yml
+++ b/hello-world-pod.yml
@@ -2,6 +2,8 @@
 - name: Deploy Hello World pod in Minikube under the hello namespace
   hosts: all
   gather_facts: no
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Ensure kubectl is configured for Minikube
       command: kubectl config use-context minikube
