update node modules

--- a/ansible/roles/build-docker-image/tasks/main.yml
+++ b/ansible/roles/build-docker-image/tasks/main.yml
@@ -2,5 +2,5 @@
   docker_image:
     name: nodejs-app
     build:
-      path: /opt/my-repo/nodejs-app
+      path: /tmp/ansible-poc/nodejs-app
     source: build
