--- a/ansible/roles/pull-code/tasks/main.yml
+++ b/ansible/roles/pull-code/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Pull code from GitHub
   git:
     repo: 'https://github.com/jatinsuthartalentica/ansible-tower-poc.git'
-    dest: /opt/my-repo
-    version: master
+    dest: /tmp/ansible-poc
+    version: main
