--- a/git-pull.yml
+++ b/git-pull.yml
@@ -9,7 +9,7 @@
 
     - name: Ensure the destination directory exists
       file:
-        path: "/home/jatin/awx-POC/ansible-tower-poc"
+        path: "/home/jatin/awx-POC"
         state: directory
         owner: "jatin"
         group: "jatin"
@@ -17,15 +17,15 @@
 
     - name: Clone the repository if not already cloned
       git:
-        repo: "https://github.com/your-username/your-repository.git"
-        dest: "/home/jatin/awx-POC/ansible-tower-poc"
+        repo: "git@github.com:jatinsuthartalentica/ansible-tower-poc.git"
+        dest: "/home/jatin/awx-POC"
         clone: yes
         update: no
       register: git_clone
 
     - name: Pull the latest changes if already cloned
       git:
-        repo: "https://github.com/your-username/your-repository.git"
-        dest: "/home/jatin/awx-POC/ansible-tower-poc"
+        repo: "git@github.com:jatinsuthartalentica/ansible-tower-poc.git"
+        dest: "/home/jatin/awx-POC"
         update: yes
       when: git_clone is not changed
