--- a/git-pull.yml
+++ b/git-pull.yml
@@ -7,6 +7,7 @@
         path: /home/jatin/awx-POC/demo-pull
         state: directory
         mode: '0755'
+      become: true
 
     - name: Clone the Git repository (Public Repo)
       git:
@@ -14,6 +15,7 @@
         dest: "/home/jatin/awx-POC/demo-pull"
         version: main  # Change branch if needed
       register: git_clone_result
+      become: true
 
     - name: Debug Git Clone Output
       debug:
