--- a/docker-build.yml
+++ b/docker-build.yml
@@ -1,8 +1,7 @@
 - hosts: all
   tasks:
     - name: Build Docker image
-      community.docker.docker_image:
-        name: my-docker-image
-        build:
-          path: /home/jatin/awx-POC/demo-pull/nodejs-app
-        source: build
+      ansible.builtin.shell: |
+        docker build -t nodejs-app .
+      args:
+      chdir: /home/jatin/awx-POC/demo-pull/nodejs-app
