updated ansible config

--- a/minikube-test.yml
+++ b/minikube-test.yml
@@ -20,11 +20,11 @@
         var: kubectl_nodes.stdout
         
     - name: Create namespace for Node.js app
-      ansible.builtin.command: kubectl create namespace nodejs --dry-run=client -o yaml | kubectl apply -f -
+      ansible.builtin.shell: kubectl create namespace nodejs --dry-run=client -o yaml | kubectl apply -f -
       register: namespace_nodejs
       changed_when: "'created' in namespace_nodejs.stdout"
 
     - name: Create namespace for Database
-      ansible.builtin.command: kubectl create namespace db --dry-run=client -o yaml | kubectl apply -f -
+      ansible.builtin.shell: kubectl create namespace db --dry-run=client -o yaml | kubectl apply -f -
       register: namespace_db
       changed_when: "'created' in namespace_db.stdout"
