--- a/ansible/roles/create-namespaces/tasks/main.yml
+++ b/ansible/roles/create-namespaces/tasks/main.yml
@@ -1,11 +1,11 @@
 - name: Create namespace for Node.js app
-  ansible.builtin.shell: kubectl create namespace nodejs --dry-run=client -o yaml | kubectl apply -f -
+  ansible.builtin.command: kubectl create namespace nodejs --dry-run=client -o yaml | kubectl apply -f -
   register: namespace_nodejs
   changed_when: "'created' in namespace_nodejs.stdout"
   failed_when: namespace_nodejs.rc != 0 and 'already exists' not in namespace_nodejs.stderr
 
 - name: Create namespace for Database
-  ansible.builtin.shell: kubectl create namespace db --dry-run=client -o yaml | kubectl apply -f -
+  ansible.builtin.command: kubectl create namespace db --dry-run=client -o yaml | kubectl apply -f -
   register: namespace_db
   changed_when: "'created' in namespace_db.stdout"
   failed_when: namespace_db.rc != 0 and 'already exists' not in namespace_db.stderr
