--- a/ansible/roles/create-namespaces/tasks/main.yml
+++ b/ansible/roles/create-namespaces/tasks/main.yml
@@ -1,8 +1,8 @@
-- name: Create namespace for Node.js app
-  ansible.builtin.command: kubectl create namespace nodejs --dry-run=client -o yaml | kubectl apply -f -
-  register: namespace_nodejs
-  changed_when: "'created' in namespace_nodejs.stdout"
-  failed_when: namespace_nodejs.rc != 0 and 'already exists' not in namespace_nodejs.stderr
+- name: Ensure Namespace Exists
+  ansible.builtin.shell: |
+    kubectl get namespace nodejs || kubectl create namespace nodejs
+  register: namespace_creation
+  changed_when: "'created' in namespace_creation.stdout or 'created' in namespace_creation.stderr"
 
 - name: Create namespace for Database
   ansible.builtin.command: kubectl create namespace db --dry-run=client -o yaml | kubectl apply -f -
