--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,16 +1,16 @@
-- name: Clone a Git repository using a role
-  hosts: all
-  become: true
-  tasks:
-    - include_role:
-        name: git_pull
+# - name: Clone a Git repository using a role
+#   hosts: all
+#   become: true
+#   tasks:
+#     - include_role:
+#         name: git_pull
 
 
-- name: build docekr image
-  hosts: all
-  tasks:
-    - include_role:
-        name: build-docker-image
+# - name: build docekr image
+#   hosts: all
+#   tasks:
+#     - include_role:
+#         name: build-docker-image
 
 - name: create namespaces
   hosts: all
