--- a/ansible/roles/deploy-app/tasks/main.yml
+++ b/ansible/roles/deploy-app/tasks/main.yml
@@ -1,52 +1,17 @@
-- name: Create namespace for MySQL
-  ansible.builtin.shell: |
-    kubectl get namespace db || kubectl create namespace db
-  register: namespace_db
-  changed_when: "'created' in namespace_db.stdout"
+- name: Ensure Namespace Exists
+  ansible.builtin.shell: kubectl create namespace nodejs --dry-run=client -o yaml | kubectl apply -f -
+- name: Apply Kubernetes Configurations
+  ansible.builtin.shell: kubectl apply -f /home/jatin/awx-POC/ansible-tower-poc/ansible/{{ item }}
+  loop:
+    - nodejs-service.yaml
+    - nodejs-deployment.yaml
+  register: kubectl_output
+  changed_when: "'created' in kubectl_output.stdout or 'configured' in kubectl_output.stdout"
 
-- name: Deploy MySQL Service and Deployment
-  ansible.builtin.shell: |
-    cat <<EOF | kubectl apply -f -
-    apiVersion: v1
-    kind: Service
-    metadata:
-      name: mysql-service
-      namespace: db
-    spec:
-      ports:
-      - port: 3306
-        targetPort: 3306
-      selector:
-        app: mysql
-    ---
-    apiVersion: apps/v1
-    kind: Deployment
-    metadata:
-      name: mysql
-      namespace: db
-    spec:
-      replicas: 1
-      selector:
-        matchLabels:
-          app: mysql
-      template:
-        metadata:
-          labels:
-            app: mysql
-        spec:
-          containers:
-          - name: mysql
-            image: mysql:5.7
-            env:
-            - name: MYSQL_ROOT_PASSWORD
-              value: "password"
-            - name: MYSQL_DATABASE
-              value: "userdb"
-    EOF
-  register: deploy_output
-  changed_when: "'created' in deploy_output.stdout or 'configured' in deploy_output.stdout"
-
-- name: Verify MySQL Deployment Rollout Status
-  ansible.builtin.shell: kubectl rollout status deployment/mysql -n db
-  register: verify_deployment
+- name: Verify Deployment Rollout
+  ansible.builtin.shell: kubectl rollout status deployment/nodejs-app -n nodejs
+  register: rollout_status
   changed_when: false
+
+- debug:
+  msg: "{{ rollout_status.stdout }}"
