--- a/ansible/roles/deploy-mysql/tasks/main.yml
+++ b/ansible/roles/deploy-mysql/tasks/main.yml
@@ -1,38 +1,52 @@
-- name: Deploy MySQL
-  k8s:
-    state: present
-    definition:
-      apiVersion: v1
-      kind: Service
-      metadata:
-        name: mysql-service
-        namespace: db
-      spec:
-        ports:
-        - port: 3306
-        selector:
+- name: Create namespace for Database
+  ansible.builtin.shell: kubectl create namespace db --dry-run=client -o yaml | kubectl apply -f -
+  register: namespace_db
+  changed_when: "'created' in namespace_db.stdout"
+  failed_when: namespace_db.rc != 0 and 'already exists' not in namespace_db.stderr
+
+- name: Deploy MySQL Service and Deployment
+  ansible.builtin.shell: |
+    cat <<EOF | kubectl apply -f -
+    apiVersion: v1
+    kind: Service
+    metadata:
+      name: mysql-service
+      namespace: db
+    spec:
+      ports:
+      - port: 3306
+        targetPort: 3306
+      selector:
+        app: mysql
+    ---
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: mysql
+      namespace: db
+    spec:
+      replicas: 1
+      selector:
+        matchLabels:
           app: mysql
-      ---
-      apiVersion: apps/v1
-      kind: Deployment
-      metadata:
-        name: mysql
-        namespace: db
-      spec:
-        replicas: 1
-        selector:
-          matchLabels:
+      template:
+        metadata:
+          labels:
             app: mysql
-        template:
-          metadata:
-            labels:
-              app: mysql
-          spec:
-            containers:
-            - name: mysql
-              image: mysql:5.7
-              env:
-              - name: MYSQL_ROOT_PASSWORD
-                value: "password"
-              - name: MYSQL_DATABASE
-                value: "userdb"
+        spec:
+          containers:
+          - name: mysql
+            image: mysql:5.7
+            env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: "password"
+            - name: MYSQL_DATABASE
+              value: "userdb"
+    EOF
+  register: deploy_output
+  changed_when: "'created' in deploy_output.stdout or 'configured' in deploy_output.stdout"
+
+- name: Verify MySQL Deployment Rollout Status
+  ansible.builtin.shell: kubectl rollout status deployment/mysql -n db
+  register: verify_deployment
+  changed_when: false
